<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.soodkartik.mvppattern.modules.signup.activity.SignUpActivity" />

        <variable
            name="signupmodel"
            type="com.soodkartik.mvppattern.modules.signup.models.request.SignUpRequest" />

        <variable
            name="userDetailModel"
            type="com.soodkartik.mvppattern.modules.signup.models.UserDetail" />

        <variable
            name="spinnerBinding"
            type="com.soodkartik.mvppattern.utilities.SpinnerBindingUtility" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".modules.signup.activity.SignUpActivity">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/toolbar_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:background="@drawable/background_layout"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/email_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.email}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/username_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/username_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/username_text"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_10"
                    android:text="@={signupmodel.userName}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/password_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/password_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_10"
                    android:text="@={signupmodel.password}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/customer_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/customer_name_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/customer_name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.customerName}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/dob_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/dob_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/dob_text"
                    android:inputType="number"
                    android:onClick="@{(view)->activity.onDateOfBirthViewClick(view)}"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.dateOfBirthLocal}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/mobile_number_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/mobile_number_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/mobile_number_text"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusForward="@id/country_ed"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.mobileNo}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/gender_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:padding="@dimen/padding_10"
                    bind:selectedValue="@={spinnerBinding.selectedSpinnerValue}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/country_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/country_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/country_text"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.country}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/state_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/state_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/state_text"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.state}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/city_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/city_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/city_text"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.city}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/pincode_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/pincode_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/pincode_text"
                    android:inputType="number"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.pincode}"
                    android:textSize="@dimen/tx_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_6"
                    android:text="@string/adhaar_card"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/tx_18" />

                <EditText
                    android:id="@+id/adhaarcard_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/adhaar_card"
                    android:inputType="number"
                    android:padding="@dimen/padding_10"
                    android:text="@={userDetailModel.adhaarCardNumber}"
                    android:textSize="@dimen/tx_18" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/background_button"
                    android:onClick="@{(view)->activity.onSubmitButtonClick(view,signupmodel,userDetailModel)}"
                    android:text="@string/submit_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/tx_18" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>